This is now fully functional. Fixed th css bug with the rows being distorted and now need to actually apply my own css

--- a/src/components/FoodCard/FoodCard.css
+++ b/src/components/FoodCard/FoodCard.css
@@ -1,3 +1,4 @@
-.foodImage .hoverable .card{
-    margin: 100px;
+.foodImage {
+    height: 150px;
+    margin: 10px;
 }
